--- a/STM32_HUMIDIFIER/STM32_HUMIDIFIER.ioc
+++ b/STM32_HUMIDIFIER/STM32_HUMIDIFIER.ioc
@@ -14,8 +14,9 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI2
 Mcu.IP5=SPI3
 Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP7=TIM10
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -33,6 +34,7 @@ Mcu.Pin19=PB9
 Mcu.Pin2=PH1 - OSC_OUT
 Mcu.Pin20=VP_FATFS_VS_Generic
 Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PC2
 Mcu.Pin4=PC3
 Mcu.Pin5=PA2
@@ -40,7 +42,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PB0
 Mcu.Pin9=PB10
-Mcu.PinsNb=22
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -56,6 +58,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA13.GPIOParameters=GPIO_Label
@@ -213,12 +216,17 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CLKPolarity,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM10.IPParameters=Prescaler,Period
+TIM10.Period=9999
+TIM10.Prescaler=9999
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
