--- a/STM32_HUMIDIFIER/STM32_HUMIDIFIER.ioc
+++ b/STM32_HUMIDIFIER/STM32_HUMIDIFIER.ioc
@@ -1,4 +1,29 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ContinuousConvMode,DMAContinuousRequests,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversion
+ADC1.NbrOfConversion=2
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.Rank-2\#ChannelRegularConversion=2
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 FATFS.IPParameters=_USE_LFN,_MAX_SS
 FATFS._MAX_SS=4096
 FATFS._USE_LFN=1
@@ -7,49 +32,55 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F411RET6
 Mcu.Family=STM32F4
-Mcu.IP0=FATFS
-Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SPI3
-Mcu.IP6=SYS
-Mcu.IP7=TIM10
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP10=USART2
+Mcu.IP2=FATFS
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI2
+Mcu.IP7=SPI3
+Mcu.IP8=SYS
+Mcu.IP9=TIM10
+Mcu.IPNb=11
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13-ANTI_TAMP
-Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=PC10
-Mcu.Pin14=PC11
-Mcu.Pin15=PC12
-Mcu.Pin16=PD2
-Mcu.Pin17=PB3
-Mcu.Pin18=PB8
-Mcu.Pin19=PB9
-Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin20=VP_FATFS_VS_Generic
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin3=PC2
-Mcu.Pin4=PC3
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PB0
-Mcu.Pin9=PB10
-Mcu.PinsNb=23
+Mcu.Pin0=PH0 - OSC_IN
+Mcu.Pin1=PH1 - OSC_OUT
+Mcu.Pin10=PB10
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PA15
+Mcu.Pin15=PC10
+Mcu.Pin16=PC11
+Mcu.Pin17=PC12
+Mcu.Pin18=PD2
+Mcu.Pin19=PB3
+Mcu.Pin2=PC2
+Mcu.Pin20=PB8
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_FATFS_VS_Generic
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin3=PC3
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PC4
+Mcu.Pin9=PB0
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -61,6 +92,10 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=Membrane
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -85,10 +120,8 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LD2 [Green Led]
-PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA6.Signal=ADCx_IN6
+PA7.Signal=ADCx_IN7
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=SPI2_CS
 PB0.Locked=true
@@ -119,15 +152,16 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=OLED_MOSI (DIN)
 PC12.Mode=TX_Only_Simplex_Unidirect_Master
 PC12.Signal=SPI3_MOSI
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
-PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC13-ANTI_TAMP.Locked=true
-PC13-ANTI_TAMP.Signal=GPXTI13
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PC3.Mode=Full_Duplex_Master
 PC3.Signal=SPI2_MOSI
+PC4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC4.GPIO_Label=Joystick_button
+PC4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC4.GPIO_PuPd=GPIO_PULLUP
+PC4.Locked=true
+PC4.Signal=GPXTI4
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=OLED_DC
 PD2.Locked=true
@@ -166,7 +200,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_TIM10_Init-TIM10-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -201,8 +235,12 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=48000000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN7.0=ADC1_IN7,IN7
+SH.ADCx_IN7.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI2.CalculateBaudRate=6.25 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
