--- a/STM32_HUMIDIFIER/STM32_HUMIDIFIER.ioc
+++ b/STM32_HUMIDIFIER/STM32_HUMIDIFIER.ioc
@@ -90,7 +90,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=Membrane
@@ -110,14 +109,8 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=OLED_RES
 PA15.Locked=true
 PA15.Signal=GPIO_Output
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=USART_TX
-PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=USART_RX
-PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA6.Signal=ADCx_IN6
@@ -200,7 +193,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_TIM10_Init-TIM10-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SPI3_Init-SPI3-false-HAL-true,8-MX_TIM10_Init-TIM10-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
