--- a/STM32_HUMIDIFIER/STM32_HUMIDIFIER.ioc
+++ b/STM32_HUMIDIFIER/STM32_HUMIDIFIER.ioc
@@ -145,7 +145,7 @@ PC3.Signal=SPI2_MOSI
 PC4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC4.GPIO_Label=Joystick_button
 PC4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PC4.GPIO_PuPd=GPIO_PULLUP
+PC4.GPIO_PuPd=GPIO_NOPULL
 PC4.Locked=true
 PC4.Signal=GPXTI4
 PD2.GPIOParameters=GPIO_Label
